--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,10 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Hi {{ user.username }}</h1>
 
 <p>
     Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAt|date('g') }} hour(s).
+    <a href="{{ url('app_verify', {username : user.username , token: user.token}) }}">Confirm my Email</a>.
 </p>
 
 <p>
-    Cheers!
+    See you soon on Snow Tricks !
 </p>
