Add forgot password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,5 +41,6 @@
                 <input type="submit" class="btn btn-primary" value="Se connecter">
             </div>
         </form>
+        <a href="{{ path('app_password_forgot') }}">Forgot password</a>
     </div>
 {% endblock %}
