--- a/templates/registration/password_forgot.html.twig
+++ b/templates/registration/password_forgot.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password forgot{% endblock %}
+{% block title %}Mot de passe oublié{% endblock %}
 
 {% block content %}
     <div class="container center">
-        <h1>Password forgot</h1>
+        <h1>Mot de passe oublié</h1>
         {{ form_start(passwordForgotForm, {'attr': {'class': 'row'}}) }}
         <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
             {{ form_widget(passwordForgotForm.username, {'attr': {'placeholder': 'Nom d\'utilisateur'}}) }}
             <span class="error">{{ form_errors(passwordForgotForm.username) }}</span>
         </div>
         <div class="input-field col s12">
-            <input type="submit" name="" class="btn btn-primary" value="Ask for reset password">
+            <input type="submit" name="" class="btn btn-primary" value="Demander un nouveau mot de passe">
         </div>
         {{ form_end(passwordForgotForm) }}
     </div>
