--- a/templates/registration/password_forgot_email.html.twig
+++ b/templates/registration/password_forgot_email.html.twig
@@ -1,10 +1,10 @@
-<h1>Hi {{ user.username }}</h1>
+<p>Bonjour {{ user.username }},</p>
 
 <p>
-    Please choose a new password by clicking the following link: <br><br>
-    <a href="{{ url('app_new_password', {username : user.username , token: user.token}) }}">Choose a new Password</a>.
+    Cliquez sur le lien ci-dessous pour choisir un nouveau mot de passe : <br><br>
+    <a href="{{ url('app_new_password', {username : user.username , token: user.token}) }}">Choisir un nouveau mot de passe</a>.
 </p>
 
 <p>
-    See you soon on Snow Tricks !
+    A bientôt sur SnowTricks !
 </p>
