--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,35 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% block stylesheets %}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Bootstrap core CSS -->
+        <link href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="{{ asset('css/business-frontpage.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
+
 <body>
-<nav>
-    <div class="nav-wrapper">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a href="{{ path('trick') }}" class="brand-logo">SnowTricks</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{ path('trick') }}">Accueil</a></li>
-                <li><a href="{{ path('trick') }}">Tricks</a></li>
-                {% if app.user %}
-                    <li><a href="/p06/public/logout">Déconnexion</a></li>
-                {% else %}
-                    <li><a href="/p06/public/register">Inscription</a></li>
-                    <li><a href="/p06/public/login">Connexion</a></li>
-                {% endif %}
-            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('trick') }}">Accueil
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('trick') }}#tricks" >Tricks</a>
+                    </li>
+                    {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/p06/public/logout">Déconnexion</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/p06/public/register">Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/p06/public/login">Connexion</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
+    </nav>
+
+<div id="content">
+{% block content %}{% endblock %}
+</div>
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Anais CEN 2020</p>
     </div>
-</nav>
-
-{% block content %}
-
-{% endblock %}
+    <!-- /.container -->
+</footer>
 
 {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <script type="text/javascript">
         $('select').formSelect();
     </script>
