--- a/templates/registration/new_password.html.twig
+++ b/templates/registration/new_password.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password forgot{% endblock %}
+{% block title %}Changement de mot de passe{% endblock %}
 
 {% block content %}
     <div class="container center">
-        <h1>Password forgot</h1>
+        <h1>Changement de mot de passe</h1>
         {{ form_start(newPasswordForm, {'attr': {'class': 'row'}}) }}
         <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(newPasswordForm.plainPassword, {'attr': {'placeholder': 'New password'}}) }}
+            {{ form_widget(newPasswordForm.plainPassword, {'attr': {'placeholder': 'Nouveau mot de passe'}}) }}
             <span class="error">{{ form_errors(newPasswordForm.plainPassword) }}</span>
         </div>
         <div class="input-field col s12">
-            <input type="submit" name="" class="btn btn-primary" value="Update password">
+            <input type="submit" name="" class="btn btn-primary" value="Modifier le mot de passe">
         </div>
         {{ form_end(newPasswordForm) }}
     </div>
