--- a/templates/trick/index.html.twig
+++ b/templates/trick/index.html.twig
@@ -3,19 +3,43 @@
 {% block title %}Accueil | {{ parent() }}{% endblock %}
 
 {% block content %}
-    <h4><a href="{{ path('trick_add') }}">Nouveau Trick</a></h4>
-    <div class="container">
-        <div class="row">
-            {% for trick in tricks %}
-                <div class="col s12 m4 l3">
-                    <div class="article-card">
-                        <img src="{{ asset('uploads/' ~ trick.picture) }}" class="responsive-img" >
-                        <h2><a href="{{ path('trick_show', {'id': trick.id}) }}">{{ trick.title }}</a></h2>
-                        <h3>{{ trick.group }}</h3>
-                        <span class="date">{{ trick.publicationDate|date('d/m/Y') }}</span>
-                    </div>
+
+    <!-- Header -->
+    <header class="bg-primary py-5 mb-5">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-lg-12">
+                    <h1 class="display-4 text-center text-white mt-5 mb-2">SnowTricks</h1>
+                    <p class="lead mb-5 text-center text-white">Blog dedié au snowboard tricks.</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+        <div class="container" id="tricks">
+            <br><br><br>
+            <div style="text-align: center;" id="tricks"><h2>Snowboard Tricks</h2></div>
+            {% if app.user %}
+                <h4><a href="{{ path('trick_add') }}">Nouveau Trick</a></h4>
+            {% endif %}
+            {% for message in app.flashes('info') %}
+                <div class="alert alert-success">
+                    {{ message }}
                 </div>
             {% endfor %}
+            <div class="row">
+                {% for trick in tricks %}
+                    <div class="col-md-4 mb-5">
+                        <div class="card h-auto">
+                            <img class="card-img-top" src="{{ asset('uploads/' ~ trick.picture) }}" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title"><a href="{{ path('trick_show', {'id': trick.id}) }}">{{ trick.title }}</a></h4>
+                                <p class="card-text">{{ trick.group }}</p>
+                                <span class="date">{{ trick.publicationDate|date('d/m/Y') }}</span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-    </div>
 {% endblock %}
