--- a/templates/registration/password_forgot.html.twig
+++ b/templates/registration/password_forgot.html.twig
@@ -3,16 +3,27 @@
 {% block title %}Mot de passe oublié{% endblock %}
 
 {% block content %}
-    <div class="container center">
-        <h1>Mot de passe oublié</h1>
-        {{ form_start(passwordForgotForm, {'attr': {'class': 'row'}}) }}
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(passwordForgotForm.username, {'attr': {'placeholder': 'Nom d\'utilisateur'}}) }}
-            <span class="error">{{ form_errors(passwordForgotForm.username) }}</span>
+    <div class="container2">
+        <br>
+        <h2 class="text-center mb-0">Mot de passe oublié</h2><br><br>
+        <div class="row">
+            <div class="col-lg-6 mx-auto">
+                <form method="post" action="">
+                    <div class="control-group">
+                        {{ form_start(passwordForgotForm, {'attr': {'class': 'row'}}) }}
+                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                            <label for="title">Nom d'utilisateur : </label><br>
+                            {{ form_widget(passwordForgotForm.username, {'attr': {'placeholder': 'Nom d\'utilisateur', 'class': 'formStyle'}}) }}
+                            <span class="error">{{ form_errors(passwordForgotForm.username) }}</span>
+                        </div>
+                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                            <input type="submit" name="" class="btn btn-primary" value="Demander un nouveau mot de passe">
+                        </div>
+                        {{ form_end(passwordForgotForm) }}
+                        <br><br><br><br><br>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="input-field col s12">
-            <input type="submit" name="" class="btn btn-primary" value="Demander un nouveau mot de passe">
-        </div>
-        {{ form_end(passwordForgotForm) }}
     </div>
 {% endblock %}
