--- a/templates/trick/trick_form.html.twig
+++ b/templates/trick/trick_form.html.twig
@@ -1,6 +1,7 @@
 {{ form_start(form, {'attr': {'class': 'row'}}) }}
 <div class="input-field col s12 m12 l12">
     {{ form_widget(form.picture) }}
+    {{ form_label(form.picture, 'Image principale') }}
     <span class="error">{{ form_errors(form.picture) }}</span>
 </div>
 
