--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,55 +3,67 @@
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
-    <div class="container center">
+    <div class="container2">
         <br>
         <h2 class="text-center mb-0">Connexion</h2>
-        <form method="post" class="row">
-            {% if error %}
-                <div class="col s12 m6 l6 offset-m3 offset-l3">
-                    <span class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
-                </div>
-            {% endif %}
-            {% for message in app.flashes('info') %}
-                <div class="alert alert-success">
-                    {{ message }}
-                </div>
-            {% endfor %}
-            {% for message in app.flashes('error') %}
-                <div class="alert alert-danger">
-                    {{ message }}
-                </div>
-            {% endfor %}
+        <div class="row">
+            <div class="col-lg-6 mx-auto">
+                <form method="post" action="">
+                    <div class="control-group">
+                        {% if error %}
+                            <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                <span class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
+                            </div>
+                        {% endif %}
+                        {% for message in app.flashes('info') %}
+                            <div class="alert alert-success">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                        {% for message in app.flashes('error') %}
+                            <div class="alert alert-danger">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
 
-            {% if app.user %}
-                <div class="col s12 m6 l6 offset-m3 offset-l3">
-                    Tu es actuellement connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnecte-toi</a>
-                </div>
-            {% endif %}
-            <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-                <input value="{{ last_username }}" name="username" id="inputEmail" class="" required autofocus placeholder="UserName">
+                        {% if app.user %}
+                            <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                Tu es actuellement connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnecte-toi</a>
+                            </div>
+                        {% endif %}
+                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                            <label for="title">Nom d'utilisateur : </label><br>
+                            <input value="{{ last_username }}" name="username" id="inputEmail" class="formStyle" required autofocus placeholder="Nom d'utilisateur">
+
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                            <label for="title">Mot de passe : </label><br>
+                            <input type="password" name="password" id="inputPassword" class="formStyle" required placeholder="Mot de passe">
+                            <p class="help-block text-danger"></p>
+                            <a href="{{ path('app_password_forgot') }}">Forgot password</a>
+                        </div>
+
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                        {#
+                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                        See https://symfony.com/doc/current/security/remember_me.html
+
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Remember me
+                            </label>
+                        </div>
+                        #}
+
+                        <div class="input-field col s12">
+                            <input type="submit" class="btn btn-primary" value="Se connecter">
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-                <input type="password" name="password" id="inputPassword" class="form-control" required placeholder="Mot de passe">
-            </div>
-
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-            {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
-                </label>
-            </div>
-            #}
-
-            <div class="input-field col s12">
-                <input type="submit" class="btn btn-primary" value="Se connecter">
-            </div>
-        </form>
-        <a href="{{ path('app_password_forgot') }}">Forgot password</a>
+        </div>
+        <br>
     </div>
 {% endblock %}
