--- a/templates/trick/edit.html.twig
+++ b/templates/trick/edit.html.twig
@@ -9,11 +9,36 @@
         <div class="row">
             <div class="col s12 m12 l12">
                 <h4>Modifier le trick {{ trick.title }}</h4>
+                <hr color="black">
+                <h2>Informations principales</h2>
+                <hr color="black">
                 {% if trick.picture is not null %}
                     <img width="300" src="{{ asset('uploads/' ~ trick.picture) }}">
                 {% endif %}
             </div>
         </div>
          {% include "trick/trick_form.html.twig" %}
+        {{ form_start(imageForm) }}
+        {% if trick %}
+            <hr color="black">
+            <h2>Images supplémentaires</h2>
+            <hr color="black">
+            {% for image in trick.images %}
+                <div class="input-field col s12 m12 l12">
+                    <img src="{{ asset('uploads/' ~ image.fileName) }}" width="300" class="responsive-img">
+                    <a href="{{ path('image_remove', {'id': image.id}) }}">
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
+                </div>
+            {%  endfor %}
+            <div class="input-field col s12 m12 l12">
+                {{ form_widget(imageForm.fileName) }}
+            </div>
+        {% endif %}
+        <div class="input-field col s12 m12 l12">
+            <input type="submit" name="imageForm" value="Add image" class="btn btn-primary">
+        </div>
+        {{ form_end(imageForm) }}
     </div>
 {% endblock %}
+
