Correct css error

--- a/public/css/business-frontpage.css
+++ b/public/css/business-frontpage.css
@@ -25,11 +25,11 @@ a {
   font-size: 1.2em !important;
 }
 
-.navbar-dark .navbar-nav .active >.nav-link,
+.navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show>.nav-link {
-  color: #ffffff;
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #fff;
 }
 
 .a-nav {
